# ivory

./: README.md  cabal.project  ci.dhall
.github/workflows/: ci.yaml
ivory/: ivory.cabal
ivory-artifact/src/Ivory/: Artifact.hs
ivory-backend-c/src/Ivory/Compile/C/: Gen.hs
ivory-model-check/src/Ivory/ModelCheck/: Ivory2CVC4.hs
ivory-stdlib/src/Ivory/Stdlib/: String.hs
ivory-tasty/: LICENSE  ivory-tasty.cabal
ivory-tasty/src/Ivory/: Tasty.hs
ivory-tasty/test/: Test.hs  Types.hs
ivory/src/Ivory/: Language.hs
ivory/src/Ivory/Language/: Cast.hs  Cond.hs  Coroutine.hs  Init.hs  MemArea.hs  Module.hs  Monad.hs
ivory/src/Ivory/Language/BitData/: Monad.hs
ivory/src/Ivory/Language/Syntax/: AST.hs
ivory/src/Ivory/Language/Syntax/Concrete/: Lexer.x  Location.hs  ParseAST.hs  ParseCore.hs  Parser.y
ivory/src/Ivory/Language/Syntax/Concrete/QQ/: Common.hs  ExprQQ.hs  StructQQ.hs
