name:                ivory-tasty
version:             0.1.0.0
author:              Richard Marko
copyright:           2020 Richard Marko
maintainer:          srk@48.io
category:            Testing
build-type:          Simple
cabal-version:       >= 1.10
synopsis:            Tasty helpers for unit testing Ivory programs.
description:         Allows running compiled Ivory programs as part of test-suite, checking for clean exit (no asserts).
homepage:            http://ivorylang.org
license:             BSD3
license-file:        LICENSE
source-repository    this
  type:     git
  location: https://github.com/distrap/ivory

library
  exposed-modules:      Ivory.Tasty
  build-depends:        base >= 4.7 && < 5
                      , ivory
                      , ivory-artifact
                      , ivory-backend-c
                      , process
                      , temporary
                      , tasty >= 0.10
                      , tasty-hunit
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall

test-suite test
  hs-source-dirs: test
  type:           exitcode-stdio-1.0
  main-is:        Test.hs
  other-modules:  Types
  ghc-options:    -Wall
  build-depends:  base >= 4.6 && < 5
               ,  tasty >= 0.10
               ,  tasty-hunit
               ,  ivory
               ,  ivory-tasty
               ,  ivory-stdlib

  default-language: Haskell2010
